spotify-stats/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotify-stats
spec:
  replicas: 0
  selector:
    matchLabels:
      app: spotify-stats
  template:
    metadata:
      labels:
        app: spotify-stats
    spec:
      containers:
        - name: web
          image: linuxserver/your_spotify:1.14.0
