spotify-stats/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spotify-stats
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: spotify-stats
