spotify-stats/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spotify-stats
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: spotify-stats.simulatan.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spotify-stats
                port:
                  number: 80
