spotify-stats/web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotify-stats-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spotify-stats-web
  template:
    metadata:
      labels:
        app: spotify-stats-web
    spec:
      containers:
        - name: web
          image: yooooomi/your_spotify_client:1.12.0
---
apiVersion: v1
kind: Service
metadata:
  name: spotify-stats-web
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: spotify-stats-web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spotify-stats-web
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: spotify.simulatan.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spotify-stats-web
                port:
                  number: 3000
